<resources>
    <string name="app_name">Scrumable</string>
    <string name="title_activity_start">Scrumable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scrumable</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mitem_Scrumboard">Scrumboard</string>
    <string name="addUS">Add UserStory</string>
    <string name="mitem_Sprint_Backlog">Sprint Backlog</string>
    <string name="mitem_Product_Backlog">Product Backlog</string>
    <string name="show_rofile">Show Profile</string>
    <string name="my_projects">My Projects</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backlogitem_title">Title</string>
    <string name="backlogitem_description">Description</string>
    <string name="backlogitem_editor">Editor</string>
    <string name="title_activity_details">Details US</string>
    <string name="lg_login">Login</string>
    <string name="lg_username">Username</string>
    <string name="lg_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="rg_register">Register</string>
    <string name="rg_confirm_password">Confirm Password</string>
    <string name="rg_birthday">dd.mm.yyyy</string>
    <string name="mitem_login">Login</string>
    <string name="mitem_register">Register</string>
    <string name="usernameCorrect">Username is correct</string>
    <string name="usernameNotCorrect">Username is not correct</string>
    <string name="dateCorrect">Date is correct</string>
    <string name="dateNotCorrect">Date is not correct</string>
    <string name="passwordCorrect">Password is correct</string>
    <string name="passwordNotCorrect">Password is not correct</string>
    <string name="confPasswordCorrect">Confirm Password is not correct</string>
    <string name="confPasswordNotCorrect">Conf Password is correct</string>
    <string name="FRAGMENT_DONE_TAG">FRAGMENT_DONE_TAG</string>
    <string name="FRAGMENT_INPROCESS_TAG">FRAGMENT_INPROCESS_TAG</string>
    <string name="FRAGMENT_TESTING_TAG">FRAGMENT_TESTING_TAG</string>
    <string name="FRAGMENT_TODO_TAG">FRAGMENT_TODO_TAG</string>
</resources>
